--- a/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/patientdashboard/templates/patientdashboard/patient_base.html
@@ -268,6 +268,7 @@
                 margin: 0;
             }
         }
+
         
         @media (max-width: 575.98px) {
             .user-menu .nav-item.d-none {
@@ -669,15 +670,15 @@
                     <i class="fa fa-search"></i>
                 </a>
             </li>
+
     
             <!-- Notifications -->
-            <li class="nav-item dropdown d-none d-lg-block">
+            <!-- <li class="nav-item dropdown d-none d-lg-block">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                     <i class="fa fa-bell" style="color: white;"></i>
                     <span class="badge badge-pill bg-danger">{{ notifications.count }}</span>
                 </a>
         
-                <!-- ✅ Fixed Notification Dropdown -->
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="notificationDropdown">
                     <li class="dropdown-header text-center bg-warning text-white">Notifications</li>
                     
@@ -693,7 +694,7 @@
                 </ul>
             </li>
         
-    
+     -->
             <!-- Chat -->
             <li class="nav-item" >
                 <a href="{% url 'chat:chat_list' %}" class="nav-link">
@@ -755,62 +756,55 @@
                     <i class="fa fa-times"></i>
                 </button>
                 <div class="sidebar-inner">
+<div id="sidebar-menu" class="sidebar-menu">
+    <ul>
+        <li class="{% if request.resolver_match.url_name == 'appointments_patients' %}active{% endif %}">
+            <a href="{% url 'patientdashboard:appointments_patients' %}">
+                <i class="fa fa-dashboard" style="color: white;"></i>
+                <span style="color: rgb(255, 255, 255);">Dashboard</span>
+            </a>
+        </li>
 
-                    <div id="sidebar-menu" class="sidebar-menu">
-                        <ul>
-                            <li class="{% if request.path == '/patient-dashboard/appointments_patients/' %}active{% endif %}">
-                                <a href="{% url 'patientdashboard:appointments_patients' %}">
-                                    <i class="fa fa-dashboard" style="color: white;"></i><span style="color: rgb(255, 255, 255);">Dashboard</span>
-                                </a>
-                            </li>
-                            <!-- <li class="{% if request.path == '/patient-dashboard/medical_records/' %}active{% endif %}">
-                                <a href="">
-                                    <i class="fa fa-wheelchair" style="color: white;"></i> <span style="color: white;">Medical Records</span>
-                                </a>
-                            </li> -->
+        <li class="{% if request.resolver_match.url_name == 'specialty_selection' %}active{% endif %}">
+            <a href="{% url 'patient_dashboard:specialty_selection' %}">
+                <i class="fa fa-calendar" style="color: white;"></i>
+                <span style="color: white;">Book Appointments</span>
+            </a>
+        </li>
 
-                            <li class="{% if request.path == '/patient-dashboard/booking/' %}active{% endif %}">
-                                <a href="{% url 'patient_dashboard:specialty_selection' %}">
-                                    <i class="fa fa-calendar" style="color: white;"></i> <span style="color: white;">Book Appointments</span>
-                                </a>
-                            </li>
+        <li class="{% if request.resolver_match.url_name == 'all_bills' %}active{% endif %}">
+            <a href="{% url 'patient_dashboard:all_bills' %}">
+                <i class="fa fa-calendar-check-o" style="color: white;"></i>
+                <span style="color: white;">Billing and Payments</span>
+            </a>
+        </li>
 
+        <li class="{% if request.resolver_match.url_name == 'exercises' %}active{% endif %}">
+            <a href="{% url 'patientdashboard:exercises' %}">
+                <i class="fa fa-heartbeat" style="color: white;"></i>
+                <span style="color: white;">Exercises</span>
+            </a>
+        </li>
 
-                            <li class="{% if request.path == '/patient-dashboard/billing/' %}active{% endif %}">
-                                <a href="{% url 'patient_dashboard:all_bills' %}">
-                                    <i class="fa fa-calendar-check-o" style="color: white;"></i> <span style="color: white;">Billing and Payments</span>
-                                </a>
-                            </li>
+        <li class="{% if request.resolver_match.url_name == 'symptoms_list' %}active{% endif %}">
+            <a href="{% url 'patientdashboard:symptoms_list' %}">
+                <i class="fa fa-stethoscope" style="color: white;"></i>
+                <span style="color: white;">Symptoms Details</span>
+            </a>
+        </li>
 
-                            
-
-
-                            <li class="{% if request.path == '/patient-dashboard/exercises/' %}active{% endif %}">
-                                <a href="{% url 'patientdashboard:exercises' %}">
-                                    <i class="fa fa-heartbeat" style="color: white;"></i> <span style="color: white;">Exercises</span>
-                                </a>
-                            </li>
-
-                            <li class="{% if request.path == '/patient-dashboard/symptoms/' %}active{% endif %}">
-                                <a href="{% url 'patientdashboard:symptoms_list' %}">
-                                    <i class="fa fa-stethoscope" style="color: white;"></i>
-                                    <span style="color: white;">Symptoms Details</span>
-                                </a>
-                            </li>
-
-                            <li class="">
-                                <a href="{% url 'patient_dashboard:eligible_practitioners_for_review' %}">
-                                    <i class="fa fa-stethoscope" style="color: white;"></i>
-                                    <span style="color: white;">Review</span>
-                                </a>
-                            </li>
-
-                            
+        <li class="{% if request.resolver_match.url_name == 'eligible_practitioners_for_review' %}active{% endif %}">
+            <a href="{% url 'patient_dashboard:eligible_practitioners_for_review' %}">
+                <i class="fa fa-stethoscope" style="color: white;"></i>
+                <span style="color: white;">Review</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
 
-                        </ul>
 
-                    </div>
+                  
                 </div>
 
             </div>
@@ -888,27 +882,70 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5 class="text-uppercase">For Patients</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Search for Doctors</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Booking</a></li>
-                        <li><a href="#">Patient Dashboard</a></li>
+                        <li><a href="/">Search for Doctors</a></li>
+                        <li><a href="{% url 'frontend:patient_login' %}">Login</a></li>
+                        <li><a href="{% url 'frontend:patient_signup' %}">Register</a></li>
+                        <li>
+                            {% if request.session.patient_id %}
+                                <a href="{% url 'patient_dashboard:appointments_patients' %}">Patient Dashboard</a>
+                            {% else %}
+                                <a href="{% url 'frontend:patient_login' %}">Patient Dashboard</a>
+                            {% endif %}
+                        </li>
+
+
                     </ul>
 
-
                 </div>
-
-                <!-- For Doctors Section -->
+                 <!-- For Doctors Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5 class="text-uppercase">For Doctors</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Appointments</a></li>
-                        <li><a href="#">Chat</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Doctor Dashboard</a></li>
+                        <li>
+                            <a href="{% if request.session.practitioner_id %}
+                                        {% url 'practitioner_dashboard:dashboard' %}
+                                    {% elif request.user.is_authenticated and request.user.is_practitioner %}
+                                        {% url 'practitioner_dashboard:dashboard' %}
+                                    {% else %}
+                                        {% url 'frontend:practitioner_login' %}
+                                    {% endif %}">
+                                Appointments
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="{% if request.session.practitioner_id %}
+                                        {% url 'practitioner_dashboard:chat' %}
+                                    {% elif request.user.is_authenticated and request.user.is_practitioner %}
+                                        {% url 'practitioner_dashboard:chat' %}
+                                    {% else %}
+                                        {% url 'frontend:practitioner_login' %}
+                                    {% endif %}">
+                                Chat
+                            </a>
+                        </li>
+
+                        <li><a href="{% url 'frontend:practitioner_login' %}">Login</a></li>
+                        <li><a href="{% url 'frontend:practitioner_signup' %}">Register</a></li>
+                        <li>
+                            <a href="{% if request.session.practitioner_id %}
+                                        {% url 'practitioner_dashboard:dashboard' %}
+                                    {% elif request.user.is_authenticated and request.user.is_practitioner %}
+                                        {% url 'practitioner_dashboard:dashboard' %}
+                                    {% else %}
+                                        {% url 'frontend:practitioner_login' %}
+                                    {% endif %}">
+                                Doctor Dashboard
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
+
+
+
+
 
                 <!-- Contact Us Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
